src/objects/Process_Steps__mdt.object
<CustomObject>
    <description>Steps related to an individual join process in order</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of join process</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Join_Step__c</fullName>
        <description>Associate join step component</description>
        <label>Join Step</label>
        <referenceTo>Join_Step__mdt</referenceTo>
        <relationshipLabel>Process Steps</relationshipLabel>
        <relationshipName>Process_Steps</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Associated join process</description>
        <label>Process</label>
        <referenceTo>Join_Process__mdt</referenceTo>
        <relationshipLabel>Process Steps</relationshipLabel>
        <relationshipName>Process_Steps</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Step_Order__c</fullName>
        <label>Step Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Title__c</fullName>
        <description>Title of step in process</description>
        <label>Step Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Process Step</label>
    <pluralLabel>Process Steps</pluralLabel>
</CustomObject>